refactor: tweak prompts